增加数据库持久化操作

--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:persistence": "node scripts/test-persistence.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "db:init": "node scripts/init-db.js",
     "db:seed": "node scripts/init-db.js",
+    "db:sync": "node -e \"import('./src/services/dataSyncService.js').then(m => new m.DataSyncService().syncNews({force: true}))\"",
+    "db:stats": "node -e \"import('./src/services/dataSyncService.js').then(m => new m.DataSyncService().getDatabaseStats().then(console.log))\"",
+    "db:cleanup": "node -e \"import('./src/services/dataSyncService.js').then(m => new m.DataSyncService().cleanupOldData(30).then(count => console.log('清理了', count, '条旧数据')))\"",
     "mcp:test": "node examples/simple-mcp-test.js",
     "mcp:demo": "node examples/mcp-client-example.js"
   },
