增加deepseek的调用能力

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ NEWS_API_KEY=your_news_api_key_here
 GNEWS_API_KEY=your_gnews_api_key_here
 
 # OpenAI API配置（用于智能摘要生成）
+DEEPSEEK_API_KEY=sk-a2f0d1565259405f8d649539fc8e953f
 OPENAI_API_KEY=your_openai_api_key_here
 
 # 服务配置
