--- a/env.example
+++ b/env.example
@@ -2,7 +2,8 @@
 NEWS_API_KEY=your_news_api_key_here
 GNEWS_API_KEY=your_gnews_api_key_here
 
-# OpenAI API配置（用于智能摘要生成）
+# AI服务配置（优先使用DeepSeek，其次使用OpenAI）
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
 
 # 服务配置
