--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
+    "vercel-build": "npm run db:generate && tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "test": "jest",
@@ -24,7 +25,8 @@
     "db:stats": "node -e \"import('./src/services/dataSyncService.js').then(m => new m.DataSyncService().getDatabaseStats().then(console.log))\"",
     "db:cleanup": "node -e \"import('./src/services/dataSyncService.js').then(m => new m.DataSyncService().cleanupOldData(30).then(count => console.log('清理了', count, '条旧数据')))\"",
     "mcp:test": "node examples/simple-mcp-test.js",
-    "mcp:demo": "node examples/mcp-client-example.js"
+    "mcp:demo": "node examples/mcp-client-example.js",
+    "check:deploy": "node scripts/check-deployment.js"
   },
   "keywords": ["mcp", "ai", "news", "openai"],
   "author": "Your Name",
