The pattern "dist/index.js" defined in `functions` doesn't match any Serverless Functions inside the `api` directory.

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
   "version": 2,
-  "functions": {
-    "dist/index.js": {
-      "maxDuration": 30,
-      "memory": 1024
-    }
-  },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/dist/index.js"
+      "destination": "/api"
     }
   ],
   "env": {
