--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "vercel-build": "npm run db:generate && tsc",
+    "vercel-build": "npm run db:generate && tsc && node scripts/copy-api.js",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "test": "jest",
@@ -28,27 +28,34 @@
     "mcp:demo": "node examples/mcp-client-example.js",
     "check:deploy": "node scripts/check-deployment.js"
   },
-  "keywords": ["mcp", "ai", "news", "openai"],
+  "keywords": [
+    "mcp",
+    "ai",
+    "news",
+    "openai"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
     "@prisma/client": "^5.7.0",
+    "@types/express": "^5.0.3",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "rss-parser": "^3.13.0",
     "dotenv": "^16.3.1",
+    "express": "^5.1.0",
     "ioredis": "^5.3.2",
-    "winston": "^3.11.0",
-    "openai": "^4.20.0"
+    "openai": "^4.20.0",
+    "rss-parser": "^3.13.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "typescript": "^5.2.0",
-    "tsx": "^4.0.0",
-    "jest": "^29.7.0",
     "@types/jest": "^29.5.0",
+    "@types/node": "^20.8.0",
+    "jest": "^29.7.0",
     "prisma": "^5.7.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "tsx": "^4.0.0",
+    "typescript": "^5.2.0"
   }
-} 
+}
