--- a/tsconfig.vercel.json
+++ b/tsconfig.vercel.json
@@ -1,14 +1,29 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES2017",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
+    "outDir": "./dist",
+    "rootDir": "./",
+    "strict": true,
+    "esModuleInterop": true,
+    "downlevelIteration": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "removeComments": false,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "allowJs": false,
     "checkJs": false,
     "noEmitOnError": false,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "downlevelIteration": true,
-    "target": "ES2017",
-    "rootDir": "./"
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "lib": ["ES2017"],
+    "types": ["node", "jest"]
   },
   "include": [
     "src/**/*.ts",
