修复vercel部署运行报错

--- a/vercel.json
+++ b/vercel.json
@@ -11,10 +11,5 @@
   },
   "buildCommand": "npm run vercel-build",
   "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "installCommand": "npm install"
 } 
