--- a/tsconfig.vercel.json
+++ b/tsconfig.vercel.json
@@ -25,12 +25,12 @@
     "types": ["node", "jest"]
   },
   "include": [
-    "src/**/*.ts",
-    "api/**/*.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
     "dist",
+    "api/**/*",
     "**/*.test.ts",
     "**/*.spec.ts",
     "**/*.js",
