--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "node scripts/build.js",
+    "build:cloud": "node scripts/cloud-build.js",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "server": "node dist/server.js",
