让railway默认采用nodejs进行build

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,6 @@
+# Node.js项目配置
 [phases.setup]
-nixPkgs = ["nodejs_18", "npm"]
+nixPkgs = ["nodejs_18"]
 
 [phases.install]
 cmds = ["npm ci --include=dev"]
