--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "MCP服务 - 关注最新AI应用新闻",
   "type": "module",
   "engines": {
-    "node": ">=18.0.0"
+    "node": "22.17.0"
   },
   "scripts": {
     "build": "node scripts/build.js",
     "build:cloud": "node scripts/cloud-build.js",
-    "build:railway": "node scripts/railway-build.js",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "server": "node dist/server.js",
