--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "22.17.0"
   },
   "scripts": {
-    "build": "node scripts/build.js",
+    "build": "tsc --project tsconfig.build.json && prisma generate && prisma db push && node scripts/init-db.js",
     "build:cloud": "node scripts/cloud-build.js",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
