忽略一些弃用的方法

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "tsc --project tsconfig.build.json && prisma generate && prisma db push && node scripts/init-db.js",
     "build:cloud": "node scripts/cloud-build.js",
     "dev": "tsx src/index.ts",
-    "start": "node dist/index.js",
-    "server": "node dist/server.js",
+    "start": "node --no-deprecation dist/index.js",
+    "server": "node --no-deprecation dist/server.js",
     "dev:server": "tsx src/server.ts",
     "test": "jest",
     "test:watch": "jest --watch",
